# TCP1P-CTF-Blockchain-Infra

./: README.md
challenge-cairo/: solver.py
challenge-eth/: .env  Dockerfile  docker-compose.yml
challenge-eth/deploy/: chal.py
challenge-solana/: Dockerfile  package.json  solve.js
challenge-solana/deploy/: .gitignore  chal.py  dev.sh
challenge-solana/setup/: Anchor.toml  package-lock.json
challenge-solana/setup/tests/: is_solved.ts  (+1 more)
images/: build.sh  push.sh
images/challenge/: 96-start-launcher  Dockerfile.cairo  Dockerfile.eth  Dockerfile.solana  README.md  pyproject.toml
images/challenge-base/: Dockerfile  requirements.txt
images/challenge/sandbox/: launcher.py  requirements.txt
images/challenge/solana-deps/: Anchor.toml
images/challenge/solana-deps/programs/exploit/: Cargo.toml
images/challenge/solana-deps/programs/exploit/src/: lib.rs
images/challenge/solana-deps/tests/: exploit.ts
images/challenge/src/sandbox/: blockchain_manager.py  index.html  launcher.py  requirements.txt
images/challenge/src/sandbox/frontend/: 404.html  index.html  index.txt
images/challenge/src/sandbox/frontend/_next/static/chunks/: 586-408ac7771ca68613.js  615-043dfbf5da4c5486.js
images/challenge/src/sandbox/frontend/_next/static/chunks/app/: layout-aeb584f04f6167cf.js  layout-d1a55de5f9a8a2b4.js  page-2d7f8381cd809512.js  page-8419db4b143ac490.js
images/challenge/src/sandbox/frontend/_next/static/css/: 06148172322f68f7.css  c21741c89396b322.css
images/challenge/src/ui/: package-lock.json  package.json
images/challenge/src/ui/app/: globals.css  page.tsx
(+2 files in other folders)
