[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
authors = [
  { name="Dimas Maulana", email="dimasmaulana0305@gmail.com" },
]
description = "Python implementation of Foundry using python web3 module "
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask==3.1.0",
    "Flask-Cors==5.0.1",
    "Flask-Limiter==3.10.1",
    "flask-sock==0.7.0",
    "Werkzeug==3.1.3",
    "starknet-py==0.25",
    "web3==7.8.0",
    "gunicorn==23.0.0",
    "base58==2.1.1",
    "solana==0.35.1",
    "toml==0.10.2",
    "solders==0.21.0"
]

[project.urls]